--- a/gb/18/4/5/n10279507.md
+++ b/gb/18/4/5/n10279507.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>古代的打火机——阳燧</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/04/1804050943382357-600x400.jpg" />
 <h6></h6>
@@ -11,72 +11,62 @@
 <p>在上古神话传说中，有一个神明的国度，名叫“燧明国”。这个国度没有春夏秋冬，没有太阳、月亮，也就没有昼夜之分。但是这个国家依然充满光明。</p>
 <p>燧明国的国人都具有长生之术，可以活到永远。有的国人度过了漫长的岁月，但因活得实在太久，会产生厌倦，这时就会升天而去。</p>
 <p>燧明国有一颗神奇的火树，名叫“燧木”。这棵树占地一万多顷，枝叶繁茂无比，缭绕的云雾就从树中产生。只要折下一段树枝，钻木就会出火。</p>
-<figure id="attachment_8452473" aria-describedby="caption-attachment-8452473" style="width: 400px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/11/1611020103161456.jpg"><img class="wp-image-8452473" src="https://i.epochtimes.com/assets/uploads/2016/11/1611020103161456-300x468.jpg" alt="" width="400" b="624" /></a><figcaption id="caption-attachment-8452473" class="wp-caption-text">圣人得到启示，他上观天象，下察五行之一的火德，发明了钻木取火，这位圣人就是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%87%A7%E4%BA%BA%E6%B0%8F.md#1">燧人氏</a>。 图为燧人氏像。（公有领域）</figcaption></figure>
-<p>后来，有一位圣人神游天国，偶然进入了燧明国，看到了燧木，看到树上有一只鸮鸟，它用嘴啄树，就会冒出灿然的火花。圣人得到启示，他上观天象，下察五行之一的火德，发明了钻木取火，将火的用法传给人类，这位圣人就是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%87%A7%E4%BA%BA%E6%B0%8F.md#1">燧人氏</a>。<strong><br />
-</strong></p>
+<figure id="attachment_8452473" aria-describedby="caption-attachment-8452473" style="width: 400px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/11/1611020103161456.jpg"><img decoding="async" class="wp-image-8452473" src="https://i.epochtimes.com/assets/uploads/2016/11/1611020103161456-300x468.jpg" alt="" width="400" b="624" /></a><figcaption id="caption-attachment-8452473" class="wp-caption-text">圣人得到启示，他上观天象，下察五行之一的火德，发明了钻木取火，这位圣人就是燧人氏。 图为燧人氏像。（公有领域）</figcaption></figure>
+<p>后来，有一位圣人神游天国，偶然进入了燧明国，看到了燧木，看到树上有一只鸮鸟，它用嘴啄树，就会冒出灿然的火花。圣人得到启示，他上观天象，下察五行之一的火德，发明了钻木取火，将火的用法传给人类，这位圣人就是燧人氏。<strong><br />
 <h2><span style="color: #0000ff;"><strong>三千年前已使用聚光原理</strong></span></h2>
-<p>三千多年前的周朝，已有“左佩金燧”、“右佩木燧”的说法，意思是晴天时用金燧取火，阴天时用木燧取火。金燧也称为<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%98%B3%E7%87%A7.md#1">阳燧</a>，是用铜铸成；木燧，是用木制成的钻火工具。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%98%B3%E7%87%A7.md#1">阳燧</a>可分两种。 一种说法，是用金属制成尖底杯，将其放在阳光下，使光线聚在杯底尖处，聚焦的光点可以引燃杯底下的艾绒等易燃物。另一种说法，阳燧是用铜铸制成凹面铜镜，将铜镜对着太阳取火。阳光射入阳燧凹面，被阳燧的凹面聚焦到一个焦点，光点温度迅速升高，也可点燃艾绒。</p>
-<figure id="attachment_10284022" aria-describedby="caption-attachment-10284022" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/04/1804070822032357.jpg"><img class="size-large wp-image-10284022" title="" src="https://i.epochtimes.com/assets/uploads/2018/04/1804070822032357-600x426.jpg" alt="" width="600" b="426" /></a><figcaption id="caption-attachment-10284022" class="wp-caption-text">西汉铜阳燧。扬州邗江甘泉乡姚庄西汉墓出土。<ahref="https://commons.wikimedia.org/wiki/File:%E8%A5%BF%E6%B1%89%E9%93%9C%E9%98%B3%E7%87%A7.jpg" target="_blank" rel="noopener noreferrer">(三猎/Wikimedia Commons)</a></figcaption></figure>
+<p>三千多年前的周朝，已有“左佩金燧”、“右佩木燧”的说法，意思是晴天时用金燧取火，阴天时用木燧取火。金燧也称为阳燧，是用铜铸成；木燧，是用木制成的钻火工具。</p>
+<p>阳燧可分两种。 一种说法，是用金属制成尖底杯，将其放在阳光下，使光线聚在杯底尖处，聚焦的光点可以引燃杯底下的艾绒等易燃物。另一种说法，阳燧是用铜铸制成凹面铜镜，将铜镜对着太阳取火。阳光射入阳燧凹面，被阳燧的凹面聚焦到一个焦点，光点温度迅速升高，也可点燃艾绒。</p>
+<figure id="attachment_10284022" aria-describedby="caption-attachment-10284022" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/04/1804070822032357.jpg"><img decoding="async" class="size-large wp-image-10284022" title="" src="https://i.epochtimes.com/assets/uploads/2018/04/1804070822032357-600x426.jpg" alt="" width="600" b="426" /></a><figcaption id="caption-attachment-10284022" class="wp-caption-text">西汉铜阳燧。扬州邗江甘泉乡姚庄西汉墓出土。<ahref="https://commons.wikimedia.org/wiki/File:%E8%A5%BF%E6%B1%89%E9%93%9C%E9%98%B3%E7%87%A7.jpg" target="_blank" rel="noopener noreferrer">(三猎/Wikimedia Commons)</a></figcaption></figure>
 <p>三千年前，周朝就已懂得使用聚光原理。即使在近代，聚光原理也被现代科学广泛运用。无论航太航空技术，还是太阳能的使用，都可以见到聚光原理的运用。因此有人认为，应将聚光原理列为是继中国四大发明之后的第五大发明呢！<strong><br />
 </strong></p>
 <h2><span style="color: #0000ff;"><strong>火柴的鼻祖</strong><strong>——</strong><strong>发烛</strong></span></h2>
 <p>古时制造阳燧，选在五月丙午日中午，十一点到一点之间，因为这个时段火气最旺。用冶炼好的五色石加以铸造。阳燧制成后，形状很像一面圆圆的镜子，但中间是凹面。把它对着太阳聚集日光，就可以轻易的取到火。</p>
 <p>除了阳燧取火之外，还有其他的取火方法。魏晋时期采用石火，用铁片撞击石头，产生火星，引燃下面的火绒。火绒的材质，多是艾绒或纸张，因为加过硝水，触火即燃。</p>
-<figure id="attachment_10282424" aria-describedby="caption-attachment-10282424" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/04/1604151700042483.jpg"><img class="wp-image-10282424 size-large" title="Three matches: the whole, the burning and extinguished. Life cycle matches symbolizing human" src="https://i.epochtimes.com/assets/uploads/2018/04/1604151700042483-600x400.jpg" alt="Three matches: the whole, the burning and extinguished. Life cycle matches symbolizing human" width="600" b="400" /></a><figcaption id="caption-attachment-10282424" class="wp-caption-text">后来出现发烛，是将松木、杉木削成薄片，上端涂上硫磺，遇火即燃。这很接近今日的火柴。图为火柴燃烧示意图。(Fotolia)</figcaption></figure>
+<figure id="attachment_10282424" aria-describedby="caption-attachment-10282424" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/04/1604151700042483.jpg"><img decoding="async" class="wp-image-10282424 size-large" title="Three matches: the whole, the burning and extinguished. Life cycle matches symbolizing human" src="https://i.epochtimes.com/assets/uploads/2018/04/1604151700042483-600x400.jpg" alt="Three matches: the whole, the burning and extinguished. Life cycle matches symbolizing human" width="600" b="400" /></a><figcaption id="caption-attachment-10282424" class="wp-caption-text">后来出现发烛，是将松木、杉木削成薄片，上端涂上硫磺，遇火即燃。这很接近今日的火柴。图为火柴燃烧示意图。(Fotolia)</figcaption></figure>
 <p>后来出现发烛，也叫焠儿、取灯，是将松木、杉木削成薄片，上端涂上硫磺。至清朝时，则用去皮的芝麻秸做成细枝，于上端涂上硫磺，遇火即燃。这很接近今日的火柴，近似火柴的鼻祖吧！@*</p>
 <p><strong>参考资料：</strong></p>
 <p>1.《太平御览?卷八百六十九?火部二》<br />
 2.《南村辍耕录?卷五?发烛》<br />
 3.《听雨丛谈?卷十一 ?取灯》<br />
-<div class="inline_share"><ahref="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F18%2F4%2F5%2Fn10279507.md#1" target="_blank" style="margin-bottom:10px;display:inline-block;"><img src="https://www.epochtimes.com/assets/themes/djy/images/fb_share/lotus.png"></a></div></p>
+<div class="inline_share"><ahref="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F18%2F4%2F5%2Fn10279507.md#1" target="_blank" style="margin-bottom:10px;display:inline-block;"><img decoding="async" src="https://www.epochtimes.com/assets/themes/djy/images/fb_share/lotus.png"></a></div></p>
 <p>责任编辑：王愉悦</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/1/3/1/n52878.md#1">北京最大的一件蠢事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/4/4/24/n519421.md#1">张耀杰：北京学界聚谈公民罢免</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/10/12/n3984907.md#1">沉静：从梁思成的眼泪到雾霾城殇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/6/26/n8038118.md#1">【文史】明成祖打造北京城 文化底蕴深厚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/11/27/n8533064.md#1">北京城门遭拆 中华文化遭劫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/1/26/n8749213.md#1">颜丹：北京该留下的何止是“德胜门箭楼”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/2/13/n8807559.md#1">心寒！再也见不到的老北京毁在它们手上</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/28/n13791183.md#1">康熙朝精品酒器 宫僚雅集杯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/7/n13627710.md#1">古代书与信的乾坤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/7/n13627478.md#1">笔：古代的无名英雄</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/11/26/n2341858.md#1">万物有灵：小黑的最后一面</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/11/27/n2343247.md#1">与主人久别重逢后，狗狗们开心地这么做......超有灵性啊！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/9/7/n2649570.md#1">万物有灵：等待日出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/9/7/n2649574.md#1">万物有灵：月娘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/11/n3282739.md#1">小牛在草地上悠哉好惬意 下一秒它居然这样做 可爱反应让人直呼太有趣了！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/12/n3283741.md#1">万物有灵：小牛寻母</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/12/n3283945.md#1">万物有灵：羊羔卧刀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/15/n3287294.md#1">万物有灵：六犬报主 忠孝感人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14293827.md#1">【未解之谜】一万年前谁修改了它们的基因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272001.md#1">【未解之谜】细思极恐 AI接管人类倒计时？</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/16/n10149315.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/26/n10811962.md#1" target="_blank">他曾接近失明 一位程序员绝处逢生后的告白</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/16/n10979189.md#1" target="_blank">共产暴政录：许世友文革中的暴行</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/30/n7475279.md#1" target="_blank">儿子长出新脾脏 医生惊呼不可能</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893016.md#1">《推背图》预言江泽民死亡和其后瘟疫惨象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890728.md#1">【百年真相】十万人命当儿戏 中共大规模杀人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13891849.md#1">【未解之谜】预言家珍妮之一 肯尼迪家族的“诅咒”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891107.md#1">出生七年才说话 轮回转生为一人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/22/n13889893.md#1">沁园春?贺神韵2023全球巡演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896088.md#1">【全球新闻特别节目】2022年度十大新闻（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895971.md#1">【车评】比电动车更实用 2022 Lexus NX 450h+ F Sport Handling AWD</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895719.md#1">【秦鹏观点】秦刚升任新外长 中美军机险相撞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13893987.md#1">中共多名退役军官接连死亡 包括毛泽东警卫员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894498.md#1">网易视频“2022年的集体记忆”火爆网络</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13893955.md#1">传中共导弹专家李君龙染疫亡 知情者：震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13894733.md#1">黄安曝中国殡仪馆火化大排长龙 网民诉惨状</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893835.md#1">徐娇自嘲感染“炫饭株” 晒病照喊“被饿醒”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894649.md#1">杨幂参股公司被爆欠债亿元 公司官方微博回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894614.md#1">站在路边突然倒下 台湾知名音乐人李惠群骤逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895820.md#1">周晓涵要求打戏来真的 曝陈亚兰不照剧本演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894250.md#1">美国73岁男子以喷射客机为家 实现年少梦想</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895183.md#1">在游轮上度假如何省钱？ 专家这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893675.md#1">尿频影响睡眠 3种常见夜尿症及治疗方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894434.md#1">含维生素K1的绿叶蔬菜可降低晚年骨折风险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893668.md#1">让厨房台面焕然一新 简单又省钱的布置技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307329.md#1">【百年真相】从资本家到右派 李康年真话代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308353.md#1">【马克时空】乌军以牙还牙 越境攻击俄库尔斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307706.md#1">《死侍与金钢狼》票房破9亿 周末有望达10亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296647.md#1">知名医院主治医师：五种癌症可早期预防</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306483.md#1">为何天气炎热时比较不会感觉饿？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307219.md#1">如何去除衣服上的防晒乳污渍？ 这一物有奇效</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/4/5/n10279507.htm">古代的打火机——阳燧</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/18/4/5/n10279507.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/4/5/n10279507.htm">古代的打火机——阳燧</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/18/4/5/n10279507.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
