--- a/gb/24/8/10/n14308673.md
+++ b/gb/24/8/10/n14308673.md
@@ -138,7 +138,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307761.md#1">奥运台湾代表团拜会巴黎勒瓦卢瓦市府</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307802.md#1">奥运冲浪比赛有“鲸喜” 鲸鱼跃出海面抢镜</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/14/n10715065.md#1" target="_blank">古玉文：公安局长卧底校长 百名少年惨成右派</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/6/n7526736.md#1" target="_blank">绝处逢生 令药学业同行目瞪口呆的神迹</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/7/n10620856.md#1" target="_blank">历经磨难的学者——吴门三大右派</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/1/8/n4337245.md#1" target="_blank">欧阳非：中共法官们的荒唐言论（1）</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
